# best-stepmania

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/prompts/: Release更新文档.prompt.md  Windows发版-全流程.prompt.md  Windows发版-打标签与发布.prompt.md  Windows发版-本地出包.prompt.md  Windows发版-版本准备.prompt.md  Windows发版-验收与排障.prompt.md  Windows发版.prompt.md  github-提交推送.prompt.md  github-验证提交推送.prompt.md  github推送.prompt.md  github提交和推送.prompt.md  优化-前端运行性能.prompt.md  优化-后端运行性能.prompt.md  优化-死代码与冗余设计.prompt.md  优化-游戏运行性能-Tauri.prompt.md  优化-游戏运行性能.prompt.md  更新文档-同步AGENTS.prompt.md  更新文档-同步UserGuide.prompt.md  更新文档-更新Changelog.prompt.md  更新文档.prompt.md  重构-reviewer.prompt.md  重构-typescript_codebase_review.prompt.md  重构-全面重构-未提交变更验收.prompt.md  重构-全面重构.prompt.md  重构-前端组件化.prompt.md  验证-未提交变更.prompt.md
.github/rules/: chinese.md  talk.md
.github/workflows/: redundancy-check.yml  release-windows.yml
crates/sm-audio/: Cargo.toml
crates/sm-chart/: Cargo.toml
crates/sm-chart/src/: encoding.rs  lib.rs  pump_sm_layout.rs  single_chart_sm.rs  sm_parser.rs  sm_writer.rs  ssc_parser.rs  tag_parser.rs
crates/sm-core/: Cargo.toml
crates/sm-noteskin/: Cargo.toml
crates/sm-profile/: Cargo.toml
crates/sm-profile/src/: db.rs  high_score.rs  lib.rs  profile.rs  replay.rs
crates/sm-score/: Cargo.toml
crates/sm-score/src/: lib.rs  life.rs  radar.rs
crates/sm-song/: Cargo.toml
crates/sm-timing/: Cargo.toml
docs/changelog/: bsm-v1.0.0.md  bsm-v1.2.0.md  bsm-v1.3.0.md  bsm-v1.3.1.md  bsm-v1.3.2.md  bsm-v1.3.3.md  bsm-v1.3.4.md  bsm-v1.3.5.md  bsm-v1.3.6.md  bsm-v1.3.7.md  bsm-v1.4.0.md  bsm-v1.4.1.md
docs/en/: USER_GUIDE.md
docs/reliability/: data-recovery.md  logging-contract.md  release-gate.md
docs/zh/: USER_GUIDE.md
public/: splashscreen.html
scripts/: check-fsd-boundaries.mjs  check-redundancy.mjs  migrate-import-paths.mjs  prepare-tauri-nsis-windows.ps1
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  window.rs
src-tauri/src/commands/: audio.rs  chart.rs  config.rs  diagnostics.rs  import.rs  logging.rs  mod.rs  noteskin.rs  profile.rs  scoring.rs  song.rs  window.rs
src-tauri/windows/: nsis-hooks.nsh
src/api/: audio.ts  config.ts  core.ts  editor.ts  profile.ts  scoring.ts  song.ts
src/app/: App.vue  initLogging.ts  main.ts
src/assets/: main.css  theme-palettes.css
src/constants/: appMeta.ts  (+1 more)
(+414 files in other folders)
